# Forecaster

./: .dockerignore  .gitignore  Makefile  README.md  backend.Dockerfile  docker-compose.dev.yml  docker-compose.yml  frontend.Dockerfile  main.py  requirements.txt  test.ipynb  test.py
.github/workflows/: tests.yml
aggregator/: aggregator.py
backend/: _test_fixtures.py
backend/api/: serializers.py  tests.py  urls.py  views.py
backend/config/: settings.py
backend/features/: betas.py  build.py  indicators.py  models.py  returns.py  tests.py
backend/ingest/: ff.py  models.py  tests.py  universe.py  yf.py
backend/models_rf/: apps.py  models.py  runner.py  strategy.py  tests.py
backend/permutation/: apps.py  models.py  runner.py  shuffle.py  tests.py
backend/portfolio/: backtest.py  models.py  optimiser.py  runner.py  tests.py
backend/quality/: checks.py  models.py  runner.py  schemas.py  tests.py
controllers/: forecast_controller.py
data_analysis/: data_analysis.py
data_imputation/: data_imputation.py
facade/: facade.py
frontend/: nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
graphical_user_interface/: main_page.py  module_notes.py
gui/: app_interface.py  page_notes.py
models/: forecast_model.py
notebooks/: 01_sdk_usage.ipynb  02_full_walkthrough.ipynb
run/: run.py
sdk/: pyproject.toml
sdk/tracker/: __init__.py  client.py  db.py
views/: abstract_page_view.py  data_analysis_view.py  data_imputation_view.py  forecast_view.py  main_page_view.py  model_training_view.py  view_manager.py
(+56 files in other folders)
