[project]
name = "forecaster-tracker"
version = "0.1.0"
description = "Local-first experiment tracking SDK for the Forecaster research warehouse."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tracker*"]
